--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Web Site</title>
 </head>
 <body>
+    <header>
+        <div id="logo">
+                    <img id="logo" src="images/logo.png" alt="Site Logo">
+        </div>
+    </header>
     <h1>My client project for Mr. Griffiths</h1>
     <p>For Web Fundementals Class</p>
+
 </body>
 </html>
