Base html for main page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,39 @@
 </head>
 <body>
     <header>
-        <div id="logo">
+        <nav>Home | Pokemon Stats | Type Chart</nav>
+        
+    </header>
+    <div id="logo">
                     <img id="logo" src="images/logo.png" alt="Site Logo">
         </div>
-    </header>
-    <h1>My client project for Mr. Griffiths</h1>
-    <p>For Web Fundementals Class</p>
-
+        <h1>GO Stats Central</h1>
+    <p>Pokémon GO Stats Central provides trainers with a clean, data-focused resource that displays the detailed statistics of all Pokémon in Pokémon GO. The site focuses on type matchups, strengths and weaknesses, moves, max CP, and release dates—helping players understand Pokémon performance without extra clutter.</p>
+    <h2>Featured Pokemon:</h2>
+    <p>(featured pokemon placeholder)</p>
+    <div id="pokemon_go_logo">
+                    <img id="pokemon_go_logo" src="images/Pokemon-GO-Logo-Free-PNG.png" alt="The Pokemon Go logo">
+        </div>
+    <div id="pokemon_collage">
+                    <img id="pokemon_collage" src="images/pokemon_collage.webp" alt="A collage of pokemon">
+        </div>
+    <h3>Legal Attribution</h3>
+    <h4>Attribution & Intellectual Property Notice</h4>
+    <p>All Pokémon, Pokémon character names, images, and trademarks are the property of their 
+    respective owners. 
+Niantic Copyright Notices: © 2012–2025 Niantic. 
+Pokémon GO © 2025 Niantic, Inc. © 2025 Pokémon. © 1995–2025 Nintendo / Creatures Inc. / 
+GAME FREAK inc. 
+Pokémon and Pokémon character names are trademarks of Nintendo. 
+This website is an independent, fan-created informational resource and is not affiliated with, 
+endorsed by, or sponsored by Niantic, Inc., The Pokémon Company, or Nintendo. All in-game 
+screenshots, icons, and official artwork are used for informational and illustrative purposes only. 
+If you believe any content on this site infringes your copyright, please contact me at 
+Griffithscal6@gmail.com and I will respond promptly.</p>
+    <footer>
+        <p>© 2025 Pokémon GO Stats Central. All rights reserved. Pokémon, Pokémon GO, and Niantic 
+        are the property of their respective owners. Not affiliated with or endorsed by Niantic, The 
+        Pokémon Company, or Nintendo.</p>
+    </footer>
 </body>
 </html>
